2015-04-03  Per Bothner  <per@bothner.com>

	* CompileMisc.java (compileNot): Use a helper IfExp to compile
	even when the target is a StackTraget expecting a primitive.

2015-03-25  Jamison Hope  <jrh@theptrgroup.com>
	    Per Bothner  <per@bothner.com>

	* CompileValues.java (validateApplyWithValues): Optimize case
	consumer is single-argument procedure.
	Also extract parameter types from a constant Procedure.

2015-03-26  Per Bothner  <per@bothner.com>

	* CompilationHelpers.java (validateSetter): Fix bug in previous
	change that led to an expression being used twice.

2015-03-22  Per Bothner  <per@bothner.com>

	* CompilationHelpers.java (validateSetter): Optimize case when
	argument is unknown Procedure - just call getSetter.
	(getSetterProc): New field.

2015-03-02  Andrea Bernardini <andrebask@gmail.com>

	* CompileMisc.java (canInlineCallCC): If a-normalization is
	enabled do not inline call/cc. (Avoids "Argument has wrong type")

2015-03-02  Per Bothner  <per@bothner.com>

	* ApplyToArgs.java (applyN): Handle multi-dimensional Arrays.
	* Setter.java (HasSetter): Likewise.

2015-02-28  Jamison Hope  <jrh@theptrgroup.com>

	* ArrayRef.java (arrayRef): Set setter property to ArraySet.arraySet.

2015-02-28  Per Bothner  <per@bothner.com>

	* CompileMisc.java: Remove unneeded call to code.emitTryEnd.

2015-02-26  Per Bothner  <per@bothner.com>

	* MakeSplice.java: Support splicing of CharSequences.

	* Map.java: Generailize to list arguments to "sequence-like" values.
	(map1, forEach1): Add overloads - one version requires LList,
	the other general sequences.
	(applyN): Re-written to work with general sequences.

2015-02-24  Per Bothner  <per@bothner.com>

	* MultiplyOp.java (2-argument apply): Handle non-Numeric numbers.
	(combine): New helper function.

2015-02-17  Per Bothner  <per@bothner.com>

	* Map.java: Use Scheme-written optimizer for map.
	* CompileMisc.java (validateApplyMap): Removed.

2015-02-14  Per Bothner  <per@bothner.com>
